--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.14"
+    "@types/cors": "^2.8.14",
+    "@types/mime": "^3.0.1"
   }
 }
