--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.4.0",
     "@types/typescript": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -34,6 +33,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
-    "@types/mime": "^3.0.1"
+    "@types/mime": "^3.0.1",
+    "@types/node": "^20.7.0"
   }
 }
